Bug 1585589 - Do not reduce the precision of the requestAnimationFrame timestamp if we are in the System Principal Context r=birtles

Differential Revision: https://phabricator.services.mozilla.com/D48118